--- a/.github/workflows/XIAOMI-4A-GIGA-LEDE-SSR.yml
+++ b/.github/workflows/XIAOMI-4A-GIGA-LEDE-SSR.yml
@@ -18,16 +18,16 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: router-config/XIAOMI-4A-GIGA-LEDE-PASSWALL2/feeds.conf.default
-  CONFIG_FILE: router-config/XIAOMI-4A-GIGA-LEDE-PASSWALL2/ssr.config
-  DIY_P1_SH: router-config/XIAOMI-4A-GIGA-LEDE-PASSWALL2/diy-part1.sh
-  DIY_P2_SH: router-config/XIAOMI-4A-GIGA-LEDE-PASSWALL2/diy-part2.sh
+  FEEDS_CONF: router-config/XIAOMI-MI4A-100M-OFFICIAL/feeds.conf.default
+  CONFIG_FILE: router-config/XIAOMI-MI4A-100M-OFFICIAL/ssr.config
+  DIY_P1_SH: router-config/XIAOMI-MI4A-100M-OFFICIAL/diy-part1.sh
+  DIY_P2_SH: router-config/XIAOMI-MI4A-100M-OFFICIAL/diy-part2.sh
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
   UPLOAD_WETRANSFER: false
   UPLOAD_RELEASE: true
-  TZ: Asia/Shanghai
+  TZ: Asia/Tehran
 
 jobs:
   build:
